--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,26 +1,35 @@
 @import url('https://fonts.googleapis.com/css?family=Cinzel+Decorative|Hind|VT323');
-
+* {
+    box-sizing: border-box;
+}
+html, body {
+    margin: 0;
+    min-height: 100%;
+}
 body {
     background: whitesmoke;
     font-family: "Hind", "Cinzel Decorative", "VT323";
+    position: relative;
 }
+
 header {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 190px;
+    width: 210px;
     margin: 0 auto;
 }
+
 h1 {
     font-family: "Cinzel Decorative";
     text-align: center;
     color: #FF0000;
-    text-shadow: 0 0 10px #C3B146;
+    text-shadow: 0px -2px 7px #C3B146, -2px 2px 7px #C3B146;
     margin-bottom: 0;
     margin-top: 20px;
-    font-size: 200%;
+    font-size: 30px;
 }
-            
+
 h3 {
     /*display: flex;*/
     /*flex-direction:row;*/
@@ -29,20 +38,33 @@ h3 {
     margin-top: 0;
     color: #C3B146;
     font-family: "VT323";
-    margin-bottom: 0;
-    }
-    
+    margin-bottom: 2px;
+}
+ /*sticky header*/
+.header {
+  padding-bottom: 10px;
+  background: #555;
+  color: #f1f1f1;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
+}
+
 #sanfrancisco {
     display: flex;
     flex-direction: row;
     margin: 0 0;
     justify-content: center;
     text-align: center;
-    /*border-bottom-color: #C3B146;*/
     font-family: "VT323";
+   
     /*background-color: #000;*/
-    
 }
+
 h5 {
     /*width: 33.33%;*/
     color: #FF0000;
@@ -52,81 +74,456 @@ h5 {
     border-bottom-width: 1px;
     border-color: #000;
     border-style: solid;
+    color: #E48514; /*#5BAB22;*/
+    /*text-shadow: 0px -2px 7px #fff, -2px 2px 7px #fff;*/
 }
 
+h2 {
+    font-size: larger;
+    font-family: "Cinzel Decorative";
+    color: #C3B146;
 
-/*h4 {*/
-/*    text-align: center;*/
-/*    font-family: "VT323";*/
-/*    margin-top: 0;*/
-/*    margin-bottom: 0; */
-/*}*/
-.nav {
+}
+
+nav {
+    /*display: flex;*/
+    /*direction: ltr;*/
+    float: left;
+    width: 20%;
+    height: 100%;
+   
+    /*flex-direction: row;*/
+    /*margin: left;*/
+    /*justify-content: center;*/
+    /*border-color: #C3B146;*/
+}
+
+p {
+    font-family: "VT323";
+    margin: 0 auto;
+    margin-top: 15px;
+    font-size: 18px;
+    margin-bottom: 10px;
+    text-align: center;
+
+}
+
+#contact a {
+    font-size: 14px;
+    color: #000;
+    text-align: center;
+}
+
+#contact p {
+    margin-bottom: 0;
+}
+
+#education li {
+    max-width: 200px;
+    display: block;
+    justify-content: center;
+    text-align: center;
+    margin: 0 auto;
+}    
+#education h4 {
+    font-family: "Cinzel Decorative";
+    font-size: 18px;
+    text-align: center;
+    padding: 5px;
+    font-weight: 400;
+}
+
+#developer {
+    margin: 17px;
+    text-align: left;
+    display: inline-block;
+    /*flex-direction: row;*/
+    
+}
+
+#developer2 {
+    columns: 3;
+    text-align: center;
+    margin-bottom: 20px;
+}
+#developer2 p {
+    margin: 0 auto 20px auto;
+}
+
+.about ul {
+    text-align: center;
     display: flex;
     flex-direction: row;
+    list-style-type: none;
     margin: 0 auto;
-    justify-content: center;
-    border-color: #C3B146;
+    /*position: relative;*/
 }
+.about li {
+    display: inline-block;
+}
+.about img {
+    width: 200px;
+    padding: 10px;
+    border-style: groove;
+    border-width: 3px;
+    border-radius: 10%;
+    display: inline-block;
+    /*flex-direction: row;*/
+    text-align: left;
+    margin: 0 40px 5px 0;
+}
+
+nav ul {
+    /*float: left;*/
+    /*width: 15%;*/
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: whitesmoke;
+   
+    /* Full height */
+    /* position: fixed;  Make it stick, even on scroll*/
+    overflow: visible;
+    /* Enable scrolling if the sidenav has too much content */
+    font-family: "VT323";
+    text-align: center;
+    
+    font-size: 20px;
+    color: #C3B146;
+
+}
+
+nav li {
+    padding: 15px 0 15px 0;
+    margin: 0 auto;
+}
+nav li img{
+    width: 200px;
+    height: 105px;
+    display: block;
+   
+   
+    /*position: relative;*/
+}
+section {
+    display: block;
+}
+
+/*#rheo {*/
+
+/*    font-family: "Cinzel Decorative";*/
+
+/*    text-align: center;*/
+
+/*    color: #FF0000;*/
+
+/*    text-shadow: 0 0 10px #C3B146;*/
+
+/*    margin-bottom: 0;*/
+
+/*    margin-top: 20px;*/
+
+/*    font-size: 200%;*/
+
+/*}*/
+
+article {
+    /*display: flex;*/
+    /*direction: ltr;*/
+    float: right;
+    padding: 20px;
+    width: 80%;
+}
+
+/* Clear floats after the columns */
+
+section:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+
+@media screen and (max-width: 600px) {
+    nav,
+    article {
+        width: 100%;
+        height: auto;
+    }
+}
+
 a {
     margin: 0 auto;
     text-align: center;
+    color: #C3B146;
+    font-family: "Cinzel Decorative";
+    text-decoration: none;
 }
+
+a:hover {
+    color: #fff !important;
+    text-shadow: 0px -2px 7px #C3B146, -2px 2px 7px #C3B146;
+}
+
+/*a:click {*/
+/*    color: #000;*/
+/*    background-color: #fff;*/
+/*}*/
+
 /*lightbox*/
+
 #lightbox ul {
-  list-style: none;
-  margin: 0 auto;
-  padding: 0;
-  text-align: center;
-  max-width: 700px;
-  display: block;
- }
+    list-style: column;
+    margin: 0 auto;
+    padding: 0;
+    text-align: left;
+    float: left;
+    justify-content: center;
+}
+
 #lightbox ul li {
-  padding: 5px;
-  display: inline-block;
-  margin: 5px;
-  background: #fff;
- }
+    padding: 5px;
+    display: inline-block;
+    margin: 5px;
+    background: #fff;
+}
+
 #lightbox ul li img {
-  width: 130px;
-  max-height: 100px;
-  display: block;
- }
+    width: 130px;
+    max-height: 100px;
+    display: inline-block;
+}
+
 #lightbox a {
-  text-decoration: none;
- }
+    text-decoration: none;
+}
+
+#lightbox p {
+    display: inline-block;
+   
+    font-family: "VT323";
+    font-size: 18px;
+}
 
 #overlay {
- background: rgba(0, 0, 0, 0.5);
- position: absolute;
- top: 0;
- left: 0;
- display: none;
- text-align: center;
- width: 100%;
- height: 100%;
- padding-top: 5%;
+    background: rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: none;
+    text-align: center;
+    width: 100%;
+    height: 200%;
+    padding-top: 5%;
+    z-index: 11;
 }
 
 #overlay img {
- border: 10px solid white;
+    position: fixed;
+    top: 40%; 
+    left: 37%;
+    margin-top: -100px;
+    margin-left: -150px;
+    border: 10px groove white;
+    max-width: 550px;
+    max-height: 400px;
+    /*line-height: 200px;*/
+    z-index: 12;
 }
 
 #overlay #closeImage {
- width: 30px;
- height: 30px;
- border: 0px;
- position: absolute;
- top: 5px;
- right: 5px;
- z-index: 1;
+    width: 30px;
+    height: 30px;
+    border: 0px;
+    position: fixed;
+    top: 200px;
+   left: 960px;
+    z-index: 13;
 }
-/*tooltip*/
-/*.tooltip {*/
-/*    padding: 20px;*/
-/*    font-family: "Cinzel Decorative";*/
-/*    color: white;*/
-/*    background: black;*/
+#lightbox:after {
+    clear:both;
+    content: "";
+    display: table;
+}
+/*End of lightbox*/
+/*#project {*/
+/*    box-sizing: border-box;*/
 /*}*/
+/*tooltip*/
+#tooltip p{
+    display: inline-block;
+    font-family: "VT323";
+    font-size: 18px;
+  
+}
+#tooltip ul {
+    display: flex;
+    flex-direction: rows;
+    justify-content: space-evenly;
+}
+#tooltip img {
+    width: 200px;
+    height: 150px;
+}
+/* end of tooltip */
+#resizable img {
+    width: 1000px;
+    padding: 0.5em;
+}
 
+.ui-resizable-helper {
+    border: 2px solid #ff0000;
+}
 
+footer {
+    display: block;
+    /*flex-direction: row;*/
+    margin: 0 auto;
+    justify-content: center;
+    text-align: center;
+    /*border-bottom-color: #C3B146;*/
+    font-family: "VT323";
+}
+img {
+    margin: 0 auto;
+}
+
+/*#rheophotos*/
+ul#rheophotos.cards-split {
+  width: 660px;
+  height: 280px;
+  list-style-type: none;
+  position: relative;
+  margin: 0 auto 20px;
+  padding: 20px;
+  cursor: pointer;
+}
+ul#rheophotos.cards-split li.title {
+  margin: 0 0 20px;
+}
+ul#rheophotos.cards-split li.title h4 {
+  font-weight: 500;
+  font-family: "VT323";
+  color: #FF0000;
+  text-shadow: 2px 2px 7px #C3B146, -2px -2px 7px #C3B146;
+}
+ul#rheophotos.cards-split li.card {
+  background: #FFF;
+  /*border: 1px 10px solid #ff000;*/
+  overflow: hidden;
+  height: 220px;
+  width: 200px;
+  border-radius: 10px;
+  text-align: center;
+  position: absolute;
+  left: 220px;
+  box-shadow: 1px 2px 2px 0 #aaa;
+  transition: all 0.4s cubic-bezier(0.63, 0.15, 0.03, 1.12);
+}
+ul#rheophotos.cards-split li.card img {
+  max-width: 100%;
+  height: 105px;
+  padding: 0 5px 0 0;
+  margin: 0 auto;
+  text-align: center;
+}
+ul#rheophotos.cards-split li.card div.content {
+  padding: 0 0;
+}
+ul#rheophotos.cards-split li.card div.content h1 {
+    font-size: 27px;
+    font-weight: 400;
+    color: #FF0000;
+    text-shadow: 2px 2px 7px #C3B146, -2px -2px 7px #C3B146;
+}
+ul#rheophotos.cards-split li.card div.content p {
+    font-family: "VT323";
+    font-size: 20px;
+    text-align: center;
+    margin: 5px auto;
+}
+
+ul#rheophotos.cards-split li.card div.content h3{
+    font-family: "VT323";
+    font-size: 20px;
+    text-align: center;
+    margin: 40px 5px 50px 5px;
+    color: #FF0000;
+  text-shadow: 2px 2px 7px #C3B146, -2px -2px 7px #C3B146;
+}
+
+ul#rheophotos.cards-split li.card.card-1 {
+  z-index: 10;
+  -webkit-transform: rotateZ(-2deg);
+          transform: rotateZ(-2deg);
+}
+ul#rheophotos.cards-split li.card.card-2 {
+  z-index: 9;
+  -webkit-transform: rotateZ(-7deg);
+          transform: rotateZ(-7deg);
+  transition-delay: 0.05s;
+}
+ul#rheophotos.cards-split li.card.card-3 {
+  z-index: 8;
+  -webkit-transform: rotateZ(5deg);
+          transform: rotateZ(5deg);
+  transition-delay: 0.1s;
+}
+ul#rheophotos.cards-split li.card.card-4 {
+  z-index: 7;
+  -webkit-transform: rotateZ(-9deg);
+          transform: rotateZ(-9deg);
+  transition-delay: 0.15s;
+}
+ul#rheophotos.cards-split li.card.card-4 {
+  z-index: 6;
+  -webkit-transform: rotateZ(7deg);
+          transform: rotateZ(7deg);
+  transition-delay: 0.2s;
+}
+ul#rheophotos.cards-split.transition li.card {
+  -webkit-transform: rotateZ(0deg);
+          transform: rotateZ(0deg);
+}
+ul#rheophotos.cards-split.transition li.card.card-1 {
+  left: 0px;
+}
+ul#rheophotos.cards-split.transition li.card.card-2 {
+  left: 440px;
+}
+ul#rheophotos.cards-split.transition li.card.card-3 {
+  left: 220px;
+}
+ul#rheophotos.cards-split.transition li.card.card-4 {
+  left: 660px;
+}
+ul#rheophotos.cards-split.transition li.card.card-5 {
+    left: -220px; }
+
+/*accordion*/
+#accordion h2 {
+    border: none ;
+    font-size: larger;
+    font-family: "Cinzel Decorative";
+    color: #fff;
+}
+#accordion a {
+     border: none ;
+    font-size: larger;
+    font-family: "Cinzel Decorative";
+    color: #C3B146;
+}
+#accordion a:hover {
+    color: #FFF;
+    text-shadow: 0px -2px 7px #C3B146, -2px 2px 7px #C3B146;
+}
+#education h4:hover {
+    color: #FFF;
+    text-shadow: 0px -2px 7px #C3B146, -2px 2px 7px #C3B146;
+}
+
+#accordion2 {
+    width: 300px;
+    height: auto;
+}
